[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0"
etherparse = "0"
thiserror = "1"
anyhow = "1"
clap = {version = "3", features = ["derive"]}
env_logger = "0"
log = "0"
crossbeam = "0"
crossbeam-channel = "0"
state_machine = {path = "../state_machine"}
ctrlc = "2"
tokio = { version = "1.2", features = ["full", "rt", "net", "tracing"] }
futures = { version = "0.3.0", features = ["async-await"] }
libc = "0"
async-std = "1"
console-subscriber = "0"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics-exporter-prometheus = { version = "0.11", features = ["http-listener"]}
