[package]
name = "state_machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-tap = "0"
etherparse = "0"
thiserror = "1"
anyhow = "1"
clap = {version = "3", features = ["derive"]}
env_logger = "0"
log = "0"
crossbeam = "0"
crossbeam-channel = "0"
derived = { path = "../derived" }
tokio = { version = "1.2", features = ["full", "tracing", "rt"] }
libc = "0"
futures = { version = "0.3.0", features = ["async-await"] }
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
metrics = "0.20"